samples/_failures_safe/1761327021_9ce3bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ce7796e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_2ce7796e.c:175:35: error: missing terminating " character
  175 |         case TOKEN_NUMBER: return "NUMBER
      |                                   ^~~~~~~
./samples/SAFE/__tmp_2ce7796e.c:175:9: error: expected expression at end of input
  175 |         case TOKEN_NUMBER: return "NUMBER
      |         ^~~~
./samples/SAFE/__tmp_2ce7796e.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ce7796e.c:175:9: error: expected declaration or statement at end of input
